[gd_scene load_steps=18 format=3 uid="uid://blwh5hv2pfq6x"]

[ext_resource type="Script" uid="uid://c3b6dw2v04ecs" path="res://Scripts/functions.gd" id="1_duuod"]
[ext_resource type="FontFile" uid="uid://clsljof7eceka" path="res://UI_Assets/trebuc.ttf" id="1_nlp2w"]
[ext_resource type="Texture2D" uid="uid://bcwajno78ah4y" path="res://UI_Assets/person-in-bed (1).png" id="2_tn3rs"]
[ext_resource type="AudioStream" uid="uid://xc8qn3nmw3n5" path="res://Assets_Other/Select.mp3" id="4_aie3q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tn3rs"]
bg_color = Color(0, 0, 0, 0.0980392)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_duuod"]
bg_color = Color(0.552941, 0.458824, 0.670588, 0.635294)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h25j3"]
bg_color = Color(0.25463, 0.212475, 0.304082, 1)
border_color = Color(0.78692, 0.746498, 0.843164, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ffre"]
bg_color = Color(0.581784, 0.51609, 0.66147, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.78692, 0.746498, 0.843164, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aie3q"]
bg_color = Color(0.345002, 0.539915, 0.624643, 0.635294)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pkq1l"]
bg_color = Color(0.142005, 0.214149, 0.243308, 1)
border_color = Color(0.678573, 0.793185, 0.840725, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tccup"]
bg_color = Color(0.442151, 0.587235, 0.646636, 1)
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.678573, 0.793185, 0.840725, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7jf0m"]
bg_color = Color(0.141176, 0.215686, 0.243137, 1)
border_color = Color(0.678431, 0.792157, 0.839216, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bitwl"]
bg_color = Color(0.443137, 0.588235, 0.647059, 1)
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.678431, 0.792157, 0.839216, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fwt2f"]
bg_color = Color(0.565438, 0.495759, 0.419924, 0.635294)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n6wpf"]
bg_color = Color(0.325952, 0.289087, 0.25217, 1)
border_color = Color(0.678431, 0.792157, 0.839216, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rddxm"]
bg_color = Color(0.600378, 0.547408, 0.494587, 1)
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.811112, 0.772999, 0.732267, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ra0h8"]
bg_color = Color(0.458072, 0.535311, 0.43697, 0.635294)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Functions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_duuod")

[node name="BACKING" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tn3rs")
metadata/_edit_lock_ = true

[node name="Sleep" type="Panel" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 948.0
offset_bottom = 528.0
theme_override_styles/panel = SubResource("StyleBoxFlat_duuod")

[node name="Label" type="Label" parent="Sleep"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 82.0
grow_horizontal = 2
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 70
text = "Sleeping:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exposition" type="Label" parent="Sleep"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 82.0
offset_bottom = 189.0
grow_horizontal = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 40
text = "Having a rough night? If it's past 20:00, you
can sleep to skip to 06:00 the next day:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bed" type="TextureRect" parent="Sleep"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -175.0
offset_right = 175.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_tn3rs")

[node name="SLEEP" type="Button" parent="Sleep"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -87.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 60
theme_override_styles/disabled = SubResource("StyleBoxFlat_h25j3")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_h25j3")
theme_override_styles/hover = SubResource("StyleBoxFlat_h25j3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_h25j3")
theme_override_styles/normal = SubResource("StyleBoxFlat_0ffre")
text = "Sleep"

[node name="Company" type="Panel" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 552.0
offset_right = 948.0
offset_bottom = 1056.0
theme_override_styles/panel = SubResource("StyleBoxFlat_aie3q")

[node name="Label" type="Label" parent="Company"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 82.0
grow_horizontal = 2
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 70
text = "Customise Company:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exposition" type="Label" parent="Company"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 82.0
offset_bottom = 189.0
grow_horizontal = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 40
text = "Change your character's name, your
company's name and its logo:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CusComp" type="VBoxContainer" parent="Company"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 45.0
offset_top = 189.0
offset_right = -45.0
offset_bottom = -148.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="F" type="LineEdit" parent="Company/CusComp"]
layout_mode = 2
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxFlat_pkq1l")
theme_override_styles/normal = SubResource("StyleBoxFlat_tccup")
placeholder_text = "Founder Name"
alignment = 1

[node name="C" type="LineEdit" parent="Company/CusComp"]
layout_mode = 2
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxFlat_pkq1l")
theme_override_styles/normal = SubResource("StyleBoxFlat_tccup")
placeholder_text = "Company Name"
alignment = 1

[node name="LOGO" type="OptionButton" parent="Company/CusComp"]
layout_mode = 2
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 35
theme_override_styles/disabled = SubResource("StyleBoxFlat_7jf0m")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_7jf0m")
theme_override_styles/hover = SubResource("StyleBoxFlat_7jf0m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7jf0m")
theme_override_styles/normal = SubResource("StyleBoxFlat_bitwl")
alignment = 1
selected = 0
item_count = 1
popup/item_0/text = "None"
popup/item_0/id = 0

[node name="Room" type="Panel" parent="."]
layout_mode = 0
offset_left = 972.0
offset_top = 24.0
offset_right = 1896.0
offset_bottom = 528.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fwt2f")

[node name="Label" type="Label" parent="Room"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 82.0
grow_horizontal = 2
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 70
text = "Customise Room:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Room"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -85.5
offset_right = 232.0
offset_bottom = 85.5
grow_vertical = 2
theme_override_constants/separation = 15

[node name="K2" type="Label" parent="Room/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 40
text = " Wall Colour:"
vertical_alignment = 1

[node name="WALLS" type="ColorPickerButton" parent="Room/VBoxContainer/K2"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 22.0
offset_top = -24.5
offset_right = 672.0
offset_bottom = 25.5
grow_horizontal = 0
grow_vertical = 2

[node name="K3" type="Label" parent="Room/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 40
text = " TV:"
vertical_alignment = 1

[node name="TV" type="OptionButton" parent="Room/VBoxContainer/K3"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 22.0
offset_top = -22.5
offset_right = 672.0
offset_bottom = 22.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 35
theme_override_styles/disabled = SubResource("StyleBoxFlat_n6wpf")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_n6wpf")
theme_override_styles/hover = SubResource("StyleBoxFlat_n6wpf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_n6wpf")
theme_override_styles/normal = SubResource("StyleBoxFlat_rddxm")
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Off"
popup/item_0/id = 0
popup/item_1/text = "On"
popup/item_1/id = 1

[node name="K4" type="Label" parent="Room/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 40
text = " Show Pots:"
vertical_alignment = 1

[node name="POTS" type="OptionButton" parent="Room/VBoxContainer/K4"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 22.0
offset_top = -22.5
offset_right = 672.0
offset_bottom = 22.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 35
theme_override_styles/disabled = SubResource("StyleBoxFlat_n6wpf")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_n6wpf")
theme_override_styles/hover = SubResource("StyleBoxFlat_n6wpf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_n6wpf")
theme_override_styles/normal = SubResource("StyleBoxFlat_rddxm")
alignment = 1
selected = 1
item_count = 2
popup/item_0/text = "Off"
popup/item_0/id = 0
popup/item_1/text = "On"
popup/item_1/id = 1

[node name="Stats" type="Panel" parent="."]
layout_mode = 0
offset_left = 972.0
offset_top = 552.0
offset_right = 1896.0
offset_bottom = 1056.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ra0h8")

[node name="Label" type="Label" parent="Stats"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 82.0
grow_horizontal = 2
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 70
text = "Company Stats:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="STATS" type="VBoxContainer" parent="Stats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 82.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="K" type="Label" parent="Stats/STATS"]
layout_mode = 2
theme_override_colors/font_color = Color(0.709804, 0.862745, 0.592157, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 40
text = "Kush Sold:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PK" type="Label" parent="Stats/STATS"]
layout_mode = 2
theme_override_colors/font_color = Color(0.803922, 0.670588, 0.87451, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 40
text = "Purple Kush Sold:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="M" type="Label" parent="Stats/STATS"]
layout_mode = 2
theme_override_colors/font_color = Color(0.647059, 0.85098, 0.92549, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 40
text = "Meth Sold:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="C" type="Label" parent="Stats/STATS"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 40
text = "Cocaine Sold:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TS" type="Label" parent="Stats/STATS"]
layout_mode = 2
theme_override_colors/font_color = Color(0.900377, 0.85619, 0.57136, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 70
text = "Total Sales:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TR" type="Label" parent="Stats/STATS"]
layout_mode = 2
theme_override_colors/font_color = Color(0.568627, 0.964706, 0.415686, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("1_nlp2w")
theme_override_font_sizes/font_size = 70
text = "Total Cash: $"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
position = Vector2(960, 540)
stream = ExtResource("4_aie3q")
volume_db = 3.0
bus = &"SFX"

[connection signal="pressed" from="Sleep/SLEEP" to="." method="_on_sleep_pressed"]
[connection signal="text_changed" from="Company/CusComp/F" to="." method="soundfx"]
[connection signal="text_changed" from="Company/CusComp/C" to="." method="soundfx"]
[connection signal="item_selected" from="Company/CusComp/LOGO" to="." method="_on_logo_item_selected"]
[connection signal="color_changed" from="Room/VBoxContainer/K2/WALLS" to="." method="_on_walls_color_changed"]
[connection signal="item_selected" from="Room/VBoxContainer/K3/TV" to="." method="_on_tv_item_selected"]
[connection signal="item_selected" from="Room/VBoxContainer/K4/POTS" to="." method="_on_pots_item_selected"]
